nesc-frontend/src/test/resources/integration/programs/good/good07/C.nc
/* Type definition in a block scope for an incomplete type. */

void f()
{
   typedef struct s alias_s;
}

configuration C
{
}
implementation
{
}
