nesc-frontend/src/test/resources/integration/programs/bad/bad03/C.nc
/* Incomplete element type of an array. */

struct s tab[10];

configuration C
{
}
implementation
{
}
